--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -119,7 +119,7 @@
                         <div class="col-xs-12">
                           <div class="">
                             <h1><%= copywriting('Contact title', {:phrase_type => 'string', :scope => 'Footer', :default => 'Let us tailor make your next journey' }) %></h1>
-                            <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Australia traveller or going to Australia for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
+                            <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Africa traveller or going to Africa for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
                           </div>
                           <div class="contact-form">
                             <h2>Fill in the form below and we'll get back to you asap</h2>
@@ -225,7 +225,7 @@
               <div class="experience white">
                 <div class="row">
                   <div class="col-xs-12">
-                    <h1>Australia Experiences</h1>
+                    <h1>Africa Experiences</h1>
                     <p class="click">Please click on the options below</p>
                   </div>
                 </div>
@@ -267,7 +267,7 @@
                 <div class="row">
                   <div class="col-xs-12">
                     <div class="experience-footer">
-                      <h3 class="hidden-xs">Tailormade Australia has something for everyone.</h3>
+                      <h3 class="hidden-xs">Tailormade Africa has something for everyone.</h3>
                       <h2 class="hidden-xs">Speak to an expert at +44 7809 726266 (Clyde) or +44 7791 360170 (Rob)</h2>
                       <a href="/activities" class="btn btn-custom">Browse All Experiences</a>
                     </div>
@@ -331,7 +331,7 @@
                         <div class="col-xs-12">
                           <div class="">
                             <h1><%= copywriting('Contact title', {:phrase_type => 'string', :scope => 'Footer', :default => 'Let us tailor make your next journey' }) %></h1>
-                            <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Australia traveller or going to Australia for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
+                            <p><%= copywriting('Contact Text', {:phrase_type => 'text', :scope => 'Footer', :default => 'Whether you are a seasoned Australia traveller or going to Africa for the very first time, we would love to speak to you. Our first aim is to get to know you, what interests you have and to then match these with our tailormade collection of experiences, camps and lodges. It is always best to talk this over and get the ball rolling from there, so please do pick up the phone for an informal chat with us. We look forward to speaking with you and tailor making your next journey.' }) %></p>
                           </div>
                           <div class="contact-form">
                             <h2>Fill in the form below and we'll get back to you asap</h2>
