--- a/app/views/refinery/inquiries/admin/inquiries/show.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/show.html.erb
@@ -92,7 +92,7 @@
     <% unless @inquiry.first_trip.blank? %>
         <tr>
           <td>
-            <strong>Is it your first trip to Australia?</strong>
+            <strong>Is it your first trip to Africa?</strong>
           </td>
           <td>
             <%= @inquiry.first_trip %>
